--- a/www/index.html
+++ b/www/index.html
@@ -13,21 +13,18 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <!-- Contenedor de la tasklist -->
+    <!-- Tu contenido aquí -->
     <div id="tasklist-container">
         <h2>Tasklist</h2>
         <ul id="tasklist">
-            <!-- Ejemplo de tareas existentes -->
-            <li>FER LA COMPRA</li>
-            <li>ACABAR EXERCICI TASKLIST</li>
-            <li>TRUCAR AL METGE</li>
+            
         </ul>
-        <button id="addTask">+</button> <!-- Botón para añadir nuevas tareas -->
+        <button id="addTask">+</button>
     </div>
 
     <!-- Diálogo jQuery UI -->
-    <div id="taskDialog" title="Añadir Tarea" style="display:none;">
-        <label for="taskInput">Tarea: </label>
+    <div id="taskDialog" title="Add Task" style="display:none;">
+        <label for="taskInput">Task: </label>
         <input type="text" id="taskInput">
     </div>
 
